--- a/amstory/src/main/res/layout/personal_fragment_layout.xml
+++ b/amstory/src/main/res/layout/personal_fragment_layout.xml
@@ -238,19 +238,43 @@
         android:orientation="vertical"
 
         android:background="#fff">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/appblue"
-            android:textSize="15sp"
-            android:layout_margin="10dp"
-            android:text="最近听过"/>
 
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/appblue"
+                android:textSize="15sp"
+                android:layout_margin="10dp"
+                android:text="最近听过"/>
+            <TextView
+                android:id="@+id/tv_del"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/appblue"
+                android:textSize="15sp"
+                android:layout_margin="10dp"
+                android:text="清除记录"/>
+        </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_pf"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/tv_no_data"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:visibility="gone"
+            android:text="当前还没有听过故事哟"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
